--- a/styles/style.module.scss
+++ b/styles/style.module.scss
@@ -1,7 +1,8 @@
-@import './modules/layout';
-@import './modules/header';
-@import './modules/footer';
-@import './modules/404';
-@import './modules/showcase';
-@import './modules/eventitem';
-@import './modules/event';
+@import "./modules/layout";
+@import "./modules/header";
+@import "./modules/footer";
+@import "./modules/404";
+@import "./modules/showcase";
+@import "./modules/eventitem";
+@import "./modules/event";
+@import "./modules/search";
