display dashboard event

--- a/styles/style.module.scss
+++ b/styles/style.module.scss
@@ -9,3 +9,5 @@
 @import "./modules/form";
 @import "./modules/modal";
 @import "./modules/authform";
+@import "./modules/dashbord";
+@import "./modules/dashboardEvent";
